monitoring/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: k8s-intro
spec:
  selector: 
    app: prometheus-server
  ports:
    - port: 9090
      targetPort: 9090
